<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_recording_details_share"
        android:title="@string/menu_recording_details_share"
        android:visible="false"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_backup"
        />

    <item
        android:id="@+id/menu_recording_details_delete"
        android:title="@string/menu_recording_details_delete"
        android:visible="false"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_delete"
        />

    <item
        android:id="@+id/menu_topics_random"
        android:title="@string/menu_topics_random"
        android:visible="false"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_shuffle"
        />

    <item
        android:id="@+id/menu_recordings"
        android:title="@string/menu_recordings"
        />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        />


</menu>