<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="16dp"
    android:keepScreenOn="true"
    tools:context="com.tmoravec.eloquent.RecordFragment">

    <Space
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        />

    <!-- Topic: ... -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/record_topic"
            />

        <EditText
            android:id="@+id/record_topic_edit"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:singleLine="true"
            />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        />

    <!-- Duration: ... -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        >

        <TextView
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/record_duration"
            />

        <NumberPicker
            android:id="@+id/record_duration_edit"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="56dp"
            />

        <Space
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|right"
            android:text="@string/record_duration_minutes"
            />

    </LinearLayout>

    <!-- Lower part of the screen -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >
        <Space
            android:id="@+id/record_above_button_space"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

        <TextView
            android:id="@+id/record_recording"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/record_recording"
            android:visibility="gone"
            style="@style/text_recording"
            />

        <TextView
            android:id="@+id/record_time_left"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textSize="24sp"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/record_button_record"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:drawableLeft="@drawable/ic_mic"
            android:text="@string/button_record"
            style="@style/button_big"
            />

        <Space
            android:id="@+id/record_below_button_space"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            />

    </LinearLayout>

</LinearLayout>
